// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染三种模式下的输入框 1`] = `
<div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 fcaPuJ sinoui-input-label"
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout Input__StyledBaseInput-m9upae-0 jafowa sinoui-input"
      data-testid="baseInput"
    >
      <input
        error={false}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 lhOYyR sinoui-input-label sinoui-input-label--filled"
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout FilledInput__StyledBaseInput-sc-1bh4y6c-0 GAJtQ sinoui-filled-input"
      data-testid="baseInput"
    >
      <input
        error={false}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 ftiUOT sinoui-input-label sinoui-input-label--outlined"
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout OutlineInput__StyledBaseInput-gfwean-0 lhpvpv sinoui-outlined-input"
      data-testid="baseInput"
    >
      <input
        error={false}
        focused={false}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="NotchedOutline__NotchedOutlineLayout-l693hg-0 cBVctA"
        style={
          Object {
            "paddingLeft": 35.25,
          }
        }
      >
        <legend
          className="NotchedOutline__Legend-l693hg-1 jgJZAz"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`渲染不可用状态下三种形态输入框 1`] = `
<div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 cLNbqs sinoui-input-label sinoui-input-label--disabled"
      disabled={true}
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 iGZEKm sinoui-base-input__layout Input__StyledBaseInput-m9upae-0 VDmgA sinoui-input sinoui-input--disabled"
      data-testid="baseInput"
      disabled={true}
    >
      <input
        disabled={true}
        error={false}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="HelperText-sc-10rfm69-0 eKjwCv"
    >
      输入用户名
    </p>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 brUQcc sinoui-input-label sinoui-input-label--disabled sinoui-input-label--filled"
      disabled={true}
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 iGZEKm sinoui-base-input__layout FilledInput__StyledBaseInput-sc-1bh4y6c-0 diUJtd sinoui-filled-input sinoui-filled-input--disabled"
      data-testid="baseInput"
      disabled={true}
    >
      <input
        disabled={true}
        error={false}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="HelperText-sc-10rfm69-0 iLfqmf"
    >
      输入用户名
    </p>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 kNLzOA sinoui-input-label sinoui-input-label--disabled sinoui-input-label--outlined sinoui-input-label--dense"
      disabled={true}
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 iGZEKm sinoui-base-input__layout OutlineInput__StyledBaseInput-gfwean-0 fWUEyo sinoui-outlined-input sinoui-outlined-input--disabled sinoui-outlined-input--dense"
      data-testid="baseInput"
      disabled={true}
    >
      <input
        dense={true}
        disabled={true}
        error={false}
        focused={false}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="NotchedOutline__NotchedOutlineLayout-l693hg-0 cBVctA"
        style={
          Object {
            "paddingLeft": 35.25,
          }
        }
      >
        <legend
          className="NotchedOutline__Legend-l693hg-1 jgJZAz"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
    </div>
    <p
      className="HelperText-sc-10rfm69-0 tawbD"
    >
      输入用户名
    </p>
  </div>
</div>
`;

exports[`渲染有辅助性文字的输入框 1`] = `
<div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 fcaPuJ sinoui-input-label"
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout Input__StyledBaseInput-m9upae-0 jafowa sinoui-input"
      data-testid="baseInput"
    >
      <input
        error={false}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="HelperText-sc-10rfm69-0 ZkdYQ"
    >
      输入用户名
    </p>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 lhOYyR sinoui-input-label sinoui-input-label--filled"
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout FilledInput__StyledBaseInput-sc-1bh4y6c-0 GAJtQ sinoui-filled-input"
      data-testid="baseInput"
    >
      <input
        error={false}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="HelperText-sc-10rfm69-0 dTrhtg"
    >
      输入用户名
    </p>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 ftiUOT sinoui-input-label sinoui-input-label--outlined"
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout OutlineInput__StyledBaseInput-gfwean-0 lhpvpv sinoui-outlined-input"
      data-testid="baseInput"
    >
      <input
        error={false}
        focused={false}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="NotchedOutline__NotchedOutlineLayout-l693hg-0 cBVctA"
        style={
          Object {
            "paddingLeft": 35.25,
          }
        }
      >
        <legend
          className="NotchedOutline__Legend-l693hg-1 jgJZAz"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
    </div>
    <p
      className="HelperText-sc-10rfm69-0 dTrhtg"
    >
      输入用户名
    </p>
  </div>
</div>
`;

exports[`渲染有错误提示的输入框 1`] = `
<div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 exRGmA sinoui-input-label sinoui-input-label--error"
      required={true}
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout Input__StyledBaseInput-m9upae-0 eJpNBh sinoui-input sinoui-input--error"
      data-testid="baseInput"
    >
      <input
        aria-required={true}
        error={true}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="HelperText-sc-10rfm69-0 hQwDkW"
    >
      必填
    </p>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 gBuJwk sinoui-input-label sinoui-input-label--error sinoui-input-label--filled"
      required={true}
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout FilledInput__StyledBaseInput-sc-1bh4y6c-0 FVCeD sinoui-filled-input sinoui-filled-input--error"
      data-testid="baseInput"
    >
      <input
        aria-required={true}
        error={true}
        focused={false}
        labelWidth={0}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
    </div>
    <p
      className="HelperText-sc-10rfm69-0 iSGRMW"
    >
      必填
    </p>
  </div>
  <div
    className="TextInputField__TextInputWrapper-r3ecrk-0 gCTtkd"
  >
    <label
      className="InputLabel-unslap-0 iNFcsS sinoui-input-label sinoui-input-label--error sinoui-input-label--outlined"
      required={true}
    >
      用户名
    </label>
    <div
      className="BaseInput__BaseInputLayout-sc-1es3u8i-0 LdEa-D sinoui-base-input__layout OutlineInput__StyledBaseInput-gfwean-0 jLHbOs sinoui-outlined-input sinoui-outlined-input--error"
      data-testid="baseInput"
    >
      <input
        aria-required={true}
        error={true}
        focused={false}
        multiline={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
      />
      <fieldset
        aria-hidden={true}
        className="NotchedOutline__NotchedOutlineLayout-l693hg-0 cBVctA"
        style={
          Object {
            "paddingLeft": 35.25,
          }
        }
      >
        <legend
          className="NotchedOutline__Legend-l693hg-1 jgJZAz"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
    </div>
    <p
      className="HelperText-sc-10rfm69-0 iSGRMW"
    >
      必填
    </p>
  </div>
</div>
`;
